--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -103,7 +103,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="actor">
+            <NavLink class="nav-link" href="actor1">
                 <span class="bi bi-person-vcard-fill" aria-hidden="true"></span> Actores
             </NavLink>
         </div>
